--- a/rascunhos/freitas/ConsumoDistrito.ipynb
+++ b/rascunhos/freitas/ConsumoDistrito.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a8b3baaf-bed7-4c27-bdb8-b837c44f62ba",
    "metadata": {
     "tags": []
@@ -45,8 +45,8 @@
    "outputs": [],
    "source": [
     "p = Path.cwd()\n",
-    "data_folder = p.parent / \"data\"\n",
-    "shape_folder = p.parent / \"shape\"\n",
+    "data_folder = p.parent.parent / \"data\"\n",
+    "shape_folder = p.parent.parent / \"shape\"\n",
     "file_path = data_folder / \"3-consumos-faturados-por-municipio-ultimos-10-anos.csv\"\n",
     "\n",
     "x = pd.read_csv(file_path, sep = \";\")"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6ea065b0-7181-4298-9aee-ceae4da40aec",
    "metadata": {
     "tags": []
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ea579c9c-4ff2-49fe-9fba-2b4769a370c0",
    "metadata": {
     "tags": []
@@ -90,7 +90,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a18d6a9f-c0f3-4d60-9c0b-48dda5bee07a",
    "metadata": {
     "tags": []
@@ -116,7 +116,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "270b18be-325c-4a72-9f01-bb44fc2ed68d",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "[165024 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7ceb7543-c855-467d-8e83-e9dea3b7765e",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "array([2023, 2021, 2022, 2020], dtype=int64)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "20eb09e3-5a77-40e3-8834-e05bfc038812",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
        "[72 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "bca12415-7142-4990-a2cd-dccd9fe40bac",
    "metadata": {
     "tags": []
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7128586e-0e2f-4d5a-9820-fe0aecbb29aa",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "71             Viseu  2023         1.164928e+09"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "658c2354-c944-4b24-8014-039ed22ab3d5",
    "metadata": {
     "tags": []
@@ -767,13 +767,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\diogo\\AppData\\Local\\Temp\\ipykernel_27148\\3889884694.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\diogo\\AppData\\Local\\Temp\\ipykernel_28400\\3889884694.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  tabela['latitude'], tabela['longitude'] = zip(*tabela['Distrito'].apply(obter_coordenadas))\n",
-      "C:\\Users\\diogo\\AppData\\Local\\Temp\\ipykernel_27148\\3889884694.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\diogo\\AppData\\Local\\Temp\\ipykernel_28400\\3889884694.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -804,10 +804,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "2a0bd303-c17c-46ad-b9a3-a215461452f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    ID_0  ISO    NAME_0  ID_1          Distrito HASC_1  CCN_1 CCA_1  \\\n",
+      "0    182  PRT  Portugal     1             Évora  PT.EV      0    07   \n",
+      "1    182  PRT  Portugal     2            Aveiro  PT.AV      0    01   \n",
+      "2    182  PRT  Portugal     3            Açores  PT.AZ      0    40   \n",
+      "3    182  PRT  Portugal     4              Beja  PT.BE      0    02   \n",
+      "4    182  PRT  Portugal     5             Braga  PT.BR      0    03   \n",
+      "5    182  PRT  Portugal     6          Bragança  PT.BA      0    04   \n",
+      "6    182  PRT  Portugal     7    Castelo Branco  PT.CB      0    05   \n",
+      "7    182  PRT  Portugal     8           Coimbra  PT.CO      0    06   \n",
+      "8    182  PRT  Portugal     9              Faro  PT.FA      0    08   \n",
+      "9    182  PRT  Portugal    10            Guarda  PT.GU      0    09   \n",
+      "10   182  PRT  Portugal    11            Leiria  PT.LE      0    10   \n",
+      "11   182  PRT  Portugal    12            Lisboa  PT.LI      0    11   \n",
+      "12   182  PRT  Portugal    13           Madeira  PT.MA      0    30   \n",
+      "13   182  PRT  Portugal    14        Portalegre  PT.PA      0    12   \n",
+      "14   182  PRT  Portugal    15             Porto  PT.PO      0    13   \n",
+      "15   182  PRT  Portugal    16          Santarém  PT.SA      0    14   \n",
+      "16   182  PRT  Portugal    17           Setúbal  PT.SE      0    15   \n",
+      "17   182  PRT  Portugal    18  Viana do Castelo  PT.VC      0    16   \n",
+      "18   182  PRT  Portugal    19         Vila Real  PT.VR      0    17   \n",
+      "19   182  PRT  Portugal    20             Viseu  PT.VI      0    18   \n",
+      "\n",
+      "               TYPE_1          ENGTYPE_1 NL_NAME_1  \\\n",
+      "0            Distrito           District      None   \n",
+      "1            Distrito           District      None   \n",
+      "2   Regiões autônomas  Autonomous Region      None   \n",
+      "3            Distrito           District      None   \n",
+      "4            Distrito           District      None   \n",
+      "5            Distrito           District      None   \n",
+      "6            Distrito           District      None   \n",
+      "7            Distrito           District      None   \n",
+      "8            Distrito           District      None   \n",
+      "9            Distrito           District      None   \n",
+      "10           Distrito           District      None   \n",
+      "11           Distrito           District      None   \n",
+      "12  Regiões autônomas  Autonomous Region      None   \n",
+      "13           Distrito           District      None   \n",
+      "14           Distrito           District      None   \n",
+      "15           Distrito           District      None   \n",
+      "16           Distrito           District      None   \n",
+      "17           Distrito           District      None   \n",
+      "18           Distrito           District      None   \n",
+      "19           Distrito           District      None   \n",
+      "\n",
+      "                           VARNAME_1  \\\n",
+      "0                               None   \n",
+      "1                               None   \n",
+      "2                             Azores   \n",
+      "3                               None   \n",
+      "4                               None   \n",
+      "5                           Braganza   \n",
+      "6                               None   \n",
+      "7                               None   \n",
+      "8                               None   \n",
+      "9                               None   \n",
+      "10                              None   \n",
+      "11  Lisbon|Lisbona|Lisbonne|Lissabon   \n",
+      "12                              None   \n",
+      "13                              None   \n",
+      "14                            Oporto   \n",
+      "15                              None   \n",
+      "16                              None   \n",
+      "17                Vianna do Castello   \n",
+      "18                        Villa Real   \n",
+      "19                             Vizeu   \n",
+      "\n",
+      "                                             geometry     Ano  \\\n",
+      "0   POLYGON ((-8.14205 39.01529, -8.14165 39.01466...     NaN   \n",
+      "1   MULTIPOLYGON (((-8.68208 40.69458, -8.68208 40...  2023.0   \n",
+      "2   MULTIPOLYGON (((-25.08910 37.01562, -25.08904 ...     NaN   \n",
+      "3   MULTIPOLYGON (((-8.79264 37.71875, -8.79264 37...  2023.0   \n",
+      "4   POLYGON ((-8.04962 41.81636, -8.04908 41.81543...  2023.0   \n",
+      "5   POLYGON ((-6.79995 41.98915, -6.79787 41.98859...     NaN   \n",
+      "6   POLYGON ((-7.29277 40.41613, -7.29026 40.41438...  2023.0   \n",
+      "7   POLYGON ((-8.71904 40.47155, -8.71902 40.47153...  2023.0   \n",
+      "8   MULTIPOLYGON (((-7.88042 36.97347, -7.88042 36...  2023.0   \n",
+      "9   MULTIPOLYGON (((-7.40951 40.92181, -7.40192 40...  2023.0   \n",
+      "10  MULTIPOLYGON (((-9.50597 39.42181, -9.50597 39...  2023.0   \n",
+      "11  MULTIPOLYGON (((-9.29903 38.66180, -9.29903 38...  2023.0   \n",
+      "12  MULTIPOLYGON (((-16.05835 30.03020, -16.05837 ...     NaN   \n",
+      "13  POLYGON ((-7.53721 39.66144, -7.53635 39.66139...  2023.0   \n",
+      "14  MULTIPOLYGON (((-8.68627 41.16045, -8.68627 41...  2023.0   \n",
+      "15  MULTIPOLYGON (((-8.93986 38.78458, -8.93986 38...     NaN   \n",
+      "16  MULTIPOLYGON (((-8.79674 37.83422, -8.79674 37...     NaN   \n",
+      "17  POLYGON ((-8.19120 42.14263, -8.19096 42.14261...     NaN   \n",
+      "18  POLYGON ((-7.90587 41.92701, -7.90306 41.92643...  2023.0   \n",
+      "19  POLYGON ((-7.39853 41.19854, -7.39594 41.19791...  2023.0   \n",
+      "\n",
+      "    Energia Ativa (kWh)   latitude  longitude  \n",
+      "0                   NaN        NaN        NaN  \n",
+      "1          3.660740e+09  40.640496  -8.653784  \n",
+      "2                   NaN        NaN        NaN  \n",
+      "3          1.026717e+09  38.015448  -7.865037  \n",
+      "4          2.941942e+09  41.551058  -8.428005  \n",
+      "5                   NaN        NaN        NaN  \n",
+      "6          6.970350e+08  39.976758  -7.446060  \n",
+      "7          2.009300e+09  40.211193  -8.429463  \n",
+      "8          2.157943e+09  37.016273  -7.935177  \n",
+      "9          4.075892e+08  40.704607  -7.195139  \n",
+      "10         2.161090e+09  39.743790  -8.807112  \n",
+      "11         7.490630e+09  38.707751  -9.136592  \n",
+      "12                  NaN        NaN        NaN  \n",
+      "13         4.141520e+08  39.207645  -7.721513  \n",
+      "14         6.334808e+09  41.149451  -8.610788  \n",
+      "15                  NaN        NaN        NaN  \n",
+      "16                  NaN        NaN        NaN  \n",
+      "17                  NaN        NaN        NaN  \n",
+      "18         4.850928e+08  41.522930  -7.546631  \n",
+      "19         1.164928e+09  40.657471  -7.913866  \n"
+     ]
+    }
+   ],
    "source": [
     "file_path = shape_folder / \"distritos.shp\"\n",
     "distritos = gpd.read_file(file_path)\n",
@@ -817,6 +933,7 @@
     "\n",
     "# Mescla os dados do seu_dataframe com as geometrias dos distritos\n",
     "mapa_data = distritos.merge(tabela, how='left', left_on='Distrito', right_on='Distrito')\n",
+    "print(mapa_data)\n",
     "\n",
     "# Crie um mapa folium centrado em Portugal\n",
     "mapa = folium.Map(location=[39.5, -8.0], zoom_start=6)\n",
@@ -2050,7 +2167,7 @@
     "- Diâmetro: max. 69- 6 km\n",
     "- Pressão e ar: abaixo 972 mbar\n",
     "- Escala Saffir- impson: categoria 1\n",
-    "- Regiões Afetadas: Norteas\r\n",
+    "- Regiões Afetadas: Norteas\n",
     "Norte"
    ]
   },
