--- a/src/limpeza/eventos_pos_reuniao.ipynb
+++ b/src/limpeza/eventos_pos_reuniao.ipynb
@@ -1,19 +1,14 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# ESTE FICHEIRO ESTA INCOMPLETO PQ O FREITAS FEZ O RESTO SEPARADO",
+   "id": "a8b3d20338bc0418"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "ExecuteTime": {
-     "end_time": "2024-04-13T02:30:10.465636Z",
-     "start_time": "2024-04-13T02:30:10.454362Z"
-    }
-   },
    "outputs": [
     {
      "data": {
@@ -24,51 +19,45 @@
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 1,
    "source": [
     "from pyprojroot.here import here\n",
     "\n",
     "here()"
-   ]
+   ],
+   "id": "initial_id"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "4f2cac855cb0d9e5",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-13T02:30:12.639870Z",
-     "start_time": "2024-04-13T02:30:10.480859Z"
+     "end_time": "2024-04-15T13:07:05.710174Z",
+     "start_time": "2024-04-15T13:07:04.471487Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Plancha\\Desktop\\pfacd\\.pixi\\envs\\default\\Lib\\site-packages\\openpyxl\\packaging\\core.py:99: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
-      "  now = datetime.datetime.utcnow()\n",
-      "C:\\Users\\Plancha\\Desktop\\pfacd\\.pixi\\envs\\default\\Lib\\site-packages\\openpyxl\\packaging\\core.py:99: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
-      "  now = datetime.datetime.utcnow()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "      codigo_do_relatorio concelho_origem_do_incidente data_do_incidente  \\\n0       EDPD_2018_JAN_T_1                       Almada        02/01/2018   \n1       EDPD_2018_JAN_T_2                        Serta        02/01/2018   \n2       EDPD_2018_JAN_T_3                   Felgueiras        04/01/2018   \n3       EDPD_2018_JAN_T_4                Torres Vedras        05/01/2018   \n4       EDPD_2018_JAN_T_5                         Nisa        09/01/2018   \n...                   ...                          ...               ...   \n7560   EDPD_2017_NOV_T_62                         Ovar        29/11/2017   \n7561   EDPD_2017_NOV_T_63         Santa Maria Da Feira        03/11/2017   \n7562   EDPD_2017_NOV_T_64         Santa Maria Da Feira        23/11/2017   \n7563   EDPD_2017_NOV_T_65                     Almeirim        03/11/2017   \n7564  IGI_2017_DEZ_TC_001       Vila Nova De Famalicão        10/12/2017   \n\n     nivel_de_tensao             causa_do_incidente duracao_incidente_min_  \\\n0                 MT                     Escavações                     55   \n1                 MT               Abate De Árvores                    163   \n2                 MT         Deslizamento De Terras                    596   \n3                 BT                       Veículos                    178   \n4                 MT                           Aves                    119   \n...              ...                            ...                    ...   \n7560              BT                       Veículos                    220   \n7561              BT                       Veículos                     92   \n7562              BT                       Veículos                    121   \n7563              BT   Descarga Atmosférica Directa                    154   \n7564      AT, MT, BT  Vento Intensidade Excepcional                   2440   \n\n      n_º_clientes_afetados tiepi_mt_min_ saifi_mt_#_ saidi_mt_min_  \\\n0                     828.0     0,0029345   0,0000443     0,0024563   \n1                     549.0     0,0029335   0,0001770     0,0165009   \n2                    3459.0     0,0192281   0,0002655     0,0359047   \n3                     102.0     0,0000000   0,0000000     0,0000000   \n4                    1731.0     0,0044221   0,0001549     0,0100377   \n...                     ...           ...         ...           ...   \n7560                    2.0             0           0             0   \n7561                    1.0             0           0             0   \n7562                    1.0             0           0             0   \n7563                    1.0             0           0             0   \n7564              1058005.0        17,100       0,330        29,300   \n\n       end_mwh_ saifi_bt_#_ saidi_bt_min_  \\\n0     0,2135252   0,0001357     0,0075338   \n1     0,2134525   0,0000900     0,0084007   \n2     1,3991121   0,0003141     0,0574566   \n3     0,0000000   0,0000167     0,0029788   \n4     0,3217694   0,0000518     0,0023477   \n...         ...         ...           ...   \n7560          0    0,000000      0,000072   \n7561          0    0,000000      0,000015   \n7562          0    0,000000      0,000040   \n7563          0    0,000028      0,004271   \n7564   1230,000       0,239        21,700   \n\n                          qualidade_de_energia_eletrica  \\\n0                                                  n.a.   \n1                                                  n.a.   \n2                                                  n.a.   \n3                                                  n.a.   \n4                                                  n.a.   \n...                                                 ...   \n7560                                               n.a.   \n7561                                               n.a.   \n7562                                               n.a.   \n7563                                               n.a.   \n7564  Exclusão, para efeitos de verificação do cumpr...   \n\n                         qualidade_de_servico_comercial  \\\n0                                                  n.a.   \n1                                                  n.a.   \n2                                                  n.a.   \n3                                                  n.a.   \n4                                                  n.a.   \n...                                                 ...   \n7560                                               n.a.   \n7561                                               n.a.   \n7562                                               n.a.   \n7563                                               n.a.   \n7564  Considera-se que as ocorrências evidenciadas p...   \n\n                                          fundamentacao       decisao  \n0     Não reúne condições para aprovação: - Após par...  Não Aprovado  \n1     Reúne condições para aprovação: - Reúne os req...      Aprovado  \n2     Reúne condições para aprovação: - Reúne os req...      Aprovado  \n3     Não reúne condições para aprovação: - Após par...  Não Aprovado  \n4     Reúne condições para aprovação: - Reúne os req...      Aprovado  \n...                                                 ...           ...  \n7560  Não reúne condições para aprovação: - Não cump...  Não Aprovado  \n7561  Não reúne condições para aprovação: - Não cump...  Não Aprovado  \n7562  Não reúne condições para aprovação: - Não cump...  Não Aprovado  \n7563  Não reúne condições para aprovação: - Não cump...  Não Aprovado  \n7564  Reúne condições para aprovação: - Reúne os req...      Aprovado  \n\n[7565 rows x 17 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>codigo_do_relatorio</th>\n      <th>concelho_origem_do_incidente</th>\n      <th>data_do_incidente</th>\n      <th>nivel_de_tensao</th>\n      <th>causa_do_incidente</th>\n      <th>duracao_incidente_min_</th>\n      <th>n_º_clientes_afetados</th>\n      <th>tiepi_mt_min_</th>\n      <th>saifi_mt_#_</th>\n      <th>saidi_mt_min_</th>\n      <th>end_mwh_</th>\n      <th>saifi_bt_#_</th>\n      <th>saidi_bt_min_</th>\n      <th>qualidade_de_energia_eletrica</th>\n      <th>qualidade_de_servico_comercial</th>\n      <th>fundamentacao</th>\n      <th>decisao</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>EDPD_2018_JAN_T_1</td>\n      <td>Almada</td>\n      <td>02/01/2018</td>\n      <td>MT</td>\n      <td>Escavações</td>\n      <td>55</td>\n      <td>828.0</td>\n      <td>0,0029345</td>\n      <td>0,0000443</td>\n      <td>0,0024563</td>\n      <td>0,2135252</td>\n      <td>0,0001357</td>\n      <td>0,0075338</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Não reúne condições para aprovação: - Após par...</td>\n      <td>Não Aprovado</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>EDPD_2018_JAN_T_2</td>\n      <td>Serta</td>\n      <td>02/01/2018</td>\n      <td>MT</td>\n      <td>Abate De Árvores</td>\n      <td>163</td>\n      <td>549.0</td>\n      <td>0,0029335</td>\n      <td>0,0001770</td>\n      <td>0,0165009</td>\n      <td>0,2134525</td>\n      <td>0,0000900</td>\n      <td>0,0084007</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Reúne condições para aprovação: - Reúne os req...</td>\n      <td>Aprovado</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>EDPD_2018_JAN_T_3</td>\n      <td>Felgueiras</td>\n      <td>04/01/2018</td>\n      <td>MT</td>\n      <td>Deslizamento De Terras</td>\n      <td>596</td>\n      <td>3459.0</td>\n      <td>0,0192281</td>\n      <td>0,0002655</td>\n      <td>0,0359047</td>\n      <td>1,3991121</td>\n      <td>0,0003141</td>\n      <td>0,0574566</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Reúne condições para aprovação: - Reúne os req...</td>\n      <td>Aprovado</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>EDPD_2018_JAN_T_4</td>\n      <td>Torres Vedras</td>\n      <td>05/01/2018</td>\n      <td>BT</td>\n      <td>Veículos</td>\n      <td>178</td>\n      <td>102.0</td>\n      <td>0,0000000</td>\n      <td>0,0000000</td>\n      <td>0,0000000</td>\n      <td>0,0000000</td>\n      <td>0,0000167</td>\n      <td>0,0029788</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Não reúne condições para aprovação: - Após par...</td>\n      <td>Não Aprovado</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>EDPD_2018_JAN_T_5</td>\n      <td>Nisa</td>\n      <td>09/01/2018</td>\n      <td>MT</td>\n      <td>Aves</td>\n      <td>119</td>\n      <td>1731.0</td>\n      <td>0,0044221</td>\n      <td>0,0001549</td>\n      <td>0,0100377</td>\n      <td>0,3217694</td>\n      <td>0,0000518</td>\n      <td>0,0023477</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Reúne condições para aprovação: - Reúne os req...</td>\n      <td>Aprovado</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7560</th>\n      <td>EDPD_2017_NOV_T_62</td>\n      <td>Ovar</td>\n      <td>29/11/2017</td>\n      <td>BT</td>\n      <td>Veículos</td>\n      <td>220</td>\n      <td>2.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0,000000</td>\n      <td>0,000072</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Não reúne condições para aprovação: - Não cump...</td>\n      <td>Não Aprovado</td>\n    </tr>\n    <tr>\n      <th>7561</th>\n      <td>EDPD_2017_NOV_T_63</td>\n      <td>Santa Maria Da Feira</td>\n      <td>03/11/2017</td>\n      <td>BT</td>\n      <td>Veículos</td>\n      <td>92</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0,000000</td>\n      <td>0,000015</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Não reúne condições para aprovação: - Não cump...</td>\n      <td>Não Aprovado</td>\n    </tr>\n    <tr>\n      <th>7562</th>\n      <td>EDPD_2017_NOV_T_64</td>\n      <td>Santa Maria Da Feira</td>\n      <td>23/11/2017</td>\n      <td>BT</td>\n      <td>Veículos</td>\n      <td>121</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0,000000</td>\n      <td>0,000040</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Não reúne condições para aprovação: - Não cump...</td>\n      <td>Não Aprovado</td>\n    </tr>\n    <tr>\n      <th>7563</th>\n      <td>EDPD_2017_NOV_T_65</td>\n      <td>Almeirim</td>\n      <td>03/11/2017</td>\n      <td>BT</td>\n      <td>Descarga Atmosférica Directa</td>\n      <td>154</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0,000028</td>\n      <td>0,004271</td>\n      <td>n.a.</td>\n      <td>n.a.</td>\n      <td>Não reúne condições para aprovação: - Não cump...</td>\n      <td>Não Aprovado</td>\n    </tr>\n    <tr>\n      <th>7564</th>\n      <td>IGI_2017_DEZ_TC_001</td>\n      <td>Vila Nova De Famalicão</td>\n      <td>10/12/2017</td>\n      <td>AT, MT, BT</td>\n      <td>Vento Intensidade Excepcional</td>\n      <td>2440</td>\n      <td>1058005.0</td>\n      <td>17,100</td>\n      <td>0,330</td>\n      <td>29,300</td>\n      <td>1230,000</td>\n      <td>0,239</td>\n      <td>21,700</td>\n      <td>Exclusão, para efeitos de verificação do cumpr...</td>\n      <td>Considera-se que as ocorrências evidenciadas p...</td>\n      <td>Reúne condições para aprovação: - Reúne os req...</td>\n      <td>Aprovado</td>\n    </tr>\n  </tbody>\n</table>\n<p>7565 rows × 17 columns</p>\n</div>"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "import pandas as pd\n",
     "import duckdb\n",
     "from janitor import clean_names\n",
     "df = clean_names(pd.read_excel(here(r\"data/EventosExcecionaisNew.xlsx\")))\n",
     "duckdb.sql(r\"select * from df\").df()"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'here' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mduckdb\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mjanitor\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m clean_names\n\u001B[0;32m----> 4\u001B[0m df \u001B[38;5;241m=\u001B[39m clean_names(pd\u001B[38;5;241m.\u001B[39mread_excel(\u001B[43mhere\u001B[49m(\u001B[38;5;124mr\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdata/EventosExcecionaisNew.xlsx\u001B[39m\u001B[38;5;124m\"\u001B[39m)))\n\u001B[1;32m      5\u001B[0m duckdb\u001B[38;5;241m.\u001B[39msql(\u001B[38;5;124mr\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mselect * from df\u001B[39m\u001B[38;5;124m\"\u001B[39m)\u001B[38;5;241m.\u001B[39mdf()\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'here' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
