--- a/rascunhos/freitas/4.JuntarDados.ipynb
+++ b/rascunhos/freitas/4.JuntarDados.ipynb
@@ -11493,8 +11493,7 @@
       "Correspondência de 'Vimioso' na base de dados WorkT para -> Vimioso (Pontuação: 100)\n",
       "Correspondência de 'Penedono' na base de dados WorkT para -> Penedono (Pontuação: 100)\n",
       "\n",
-      "Correspondências atualizadas com sucesso na base de dados WorkT\n",
-      "\n"
+      "Correspondências atualizadas com sucesso na base de dados WorkT\n"
      ]
     },
     {
