--- a/rascunhos/freitas/5.NSupervisionada.ipynb
+++ b/rascunhos/freitas/5.NSupervisionada.ipynb
@@ -13,16 +13,7 @@
    "execution_count": 1,
    "id": "802e658a-a2cc-47a7-baef-ce5d1e8e47de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.26.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "import re\n",
@@ -480,7 +471,8 @@
     {
      "data": {
       "text/plain": [
-       "array([2018, 2021, 2022, 2023, 2019, 2020, 2014, 2015, 2016, 2017])"
+       "array([2018, 2021, 2022, 2023, 2019, 2020, 2014, 2015, 2016, 2017],\n",
+       "      dtype=int64)"
       ]
      },
      "execution_count": 4,
@@ -2763,7 +2755,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "d1580123-ab51-438c-9080-061ca1ff9a62",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2788,6 +2782,7 @@
     "plt.xticks(fontsize=12)\n",
     "plt.yticks(fontsize=12)\n",
     "plt.tight_layout()\n",
+    "plt.save\n",
     "plt.show()"
    ]
   },
