Feito a percentagem de zonas rurais no 5.1.

--- a/rascunhos/freitas/6.1. Supervisionada.ipynb
+++ b/rascunhos/freitas/6.1. Supervisionada.ipynb
@@ -3016,11 +3016,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f05e0021-c33b-4ab0-9a3c-1926a6ab1e83",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "345a8a11-c27c-47c8-b596-5ef02572d9c7",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
    "source": [
     "date = datetime.datetime(2024, 5, 28)\n",
     "concelhos = QuebrasFinal[\"concelho\"].unique()\n",
@@ -3029,12 +3031,12 @@
     "for i in concelhos:\n",
     "    # Dados de amanhã (exemplo)\n",
     "    dados_amanha = pd.DataFrame({\n",
-    "        't_med': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['t_med'].mean()],\n",
-    "        't_max': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['t_max'].mean()],\n",
-    "        't_min': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['t_min'].mean()],\n",
-    "        'ff_med': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['ff_med'].mean()],\n",
-    "        'ff_max': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['ff_max'].mean()],\n",
-    "        'pr_qtd': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['pr_qtd'].mean()],\n",
+    "        't_med': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['t_med'].mean()], # Temp Med ªC\n",
+    "        't_max': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['t_max'].mean()], # Temp Max ºC\n",
+    "        't_min': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['t_min'].mean()], # Temp min ªC\n",
+    "        'ff_med': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['ff_med'].mean()], # Intensidade média do vento\n",
+    "        'ff_max': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['ff_max'].mean()], # Intensidade máxima do vento\n",
+    "        'pr_qtd': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['pr_qtd'].mean()], # \n",
     "        'dd_med_sin': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['dd_med_sin'].mean()],\n",
     "        'dd_med_cos': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['dd_med_cos'].mean()],\n",
     "        'dd_ffx_sin': [QuebrasFinal[(QuebrasFinal['mes'] == date.month) & (QuebrasFinal['dia'] == date.day) & (QuebrasFinal['concelho'] == i)]['dd_ffx_sin'].mean()],\n",
