--- a/rascunhos/freitas/6.1. Supervisionada.ipynb
+++ b/rascunhos/freitas/6.1. Supervisionada.ipynb
@@ -872,7 +872,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "397e192b-73d2-41b2-9f46-943a7fa98ddc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3024,7 +3026,7 @@
    },
    "outputs": [],
    "source": [
-    "date = datetime.datetime(2024, 5, 28)\n",
+    "date = datetime.datetime(2024, 6, 17)\n",
     "concelhos = QuebrasFinal[\"concelho\"].unique()\n",
     "PreverFuturo = pd.DataFrame(columns=['Concelho', 'Previsão'])\n",
     "\n",
